--- a/index.html
+++ b/index.html
@@ -2,52 +2,53 @@
 <html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HARVET</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <meta name="viewport" content="initial-scale=1">
   </head>
   <body>
     <nav>
-      <img src="" alt="logo">
+      <div class="logo">
+        <img src="images/logo.svg" alt="logo">
+        <p>HARVET</p>
+      </div>
       <a href="#">О проекте</a>
     </nav>
     <article>
-      <header>
-        <div class="card">
-          <div class="text">
-            <h2>Наглядный пример чтобы учиться веб-вёрстке.</h2>
-            <p>Проект, разработанный командой H&aelig;d Exchange, для&nbsp;обучения основам веб-вёрстки в&nbsp;рамках образовательного проекта Hack Exchange.</p>
-          </div>
-          <img src="" alt="pisture">
-          <img src="" alt="art">
+      <div class="card">
+        <div class="text">
+          <h2>Прекрасный образет фауны</h2>
+          <p>Проект, разработанный командой H&aelig;d Exchange, для&nbsp;обучения основам веб-вёрстки в&nbsp;рамках образовательного проекта Hack Exchange.</p>
+          <img src="images/line.png" alt="art">
         </div>
-        <div class="card">
-          <div class="text">
-            <h2>С нуля до первого сайта под компьютеры, смартфоны и планшеты.
-            </h2>
-            <p>Чтобы начать изучать веб-вёрстку на&nbsp;этом проекте не&nbsp;требуется каких-то специальных знаний, кроме базового умения пользоваться компьютером.</p>
-          </div>
-          <img src="" alt="pisture">
-          <img src="" alt="art">
+        <img src="images/el_1.png" alt="pisture">
+      </div>
+      <div class="card">
+        <div class="text">
+          <h2>Необычный домашний питомец, раб, мясо, как вам угодно</h2>
+          <p>Чтобы начать изучать веб-вёрстку на&nbsp;этом проекте не&nbsp;требуется каких-то специальных знаний, кроме базового умения пользоваться компьютером.</p>
+          <img src="images/line.png" alt="art">
         </div>
-        <div class="card">
-          <div class="text">
-            <h2>Реальный проект, реальный рабочий процесс.</h2>
-            <p>Обучение приближено к&nbsp;работе в&nbsp;реальной жизни. Работа разбита на&nbsp;этапы от&nbsp;типографики, создания меню и&nbsp;использования эффектов,  до&nbsp;адаптации под мобильные устройства  и&nbsp;использования скриптов.</p>
-          </div>
-          <img src="" alt="pisture">
-          <img src="" alt="art">
+        <img src="images/el_3.png" alt="pisture">
+      </div>
+      <div class="card">
+        <div class="text">
+          <h2>Реальный слон, реальный розовый слон.</h2>
+          <p>Обучение приближено к&nbsp;работе в&nbsp;реальной жизни. Работа разбита на&nbsp;этапы от&nbsp;типографики, создания меню и&nbsp;использования эффектов,  до&nbsp;адаптации под мобильные устройства  и&nbsp;использования скриптов.</p>
+          <img src="images/line.png" alt="art">
         </div>
-        <div class="center">
-          <h2>Возможность самостоятельного и&nbsp;курируемого обучения.</h2>
-          <p>Вы&nbsp;можете обучаться самостоятельно по&nbsp;исходному коду проекта, выложенному на&nbsp;GitHub, или записаться на&nbsp;курс &laquo;Основы веб-вёрстки с&nbsp;Захаром Днём&raquo; на&nbsp;Hack Exchange.</p>
-          <a href="#">Исходный код на GitHub</a>
-          <a href="#">Курс на Hack Exchange</a>
-        </div>
-        <footer>
-          <p>Пожалуйста, поделитесь знаниями с друзьями</p>
-          <a href="#">Поделиться</a>
-        </footer>
-      </header>
+        <img class="gif" src="images/el_2.gif" alt="pisture">
+      </div>
+      <div class="center">
+        <h2>Возможность получить&nbsp;замечательного розового слона.</h2>
+        <p>Вы можете приобрести замечательное и очень милое животное. Вы будете в праве сделать с ним все, что угодно и никто вам ничего за это на скажет, Ведь кто узнает! Правльно! Никто. Забери своего слона уже сегодня!</p>
+        <a href="#">А может лучше не надо...</a>
+        <a href="#">Купи розового слона!</a>
+      </div>
+      <footer>
+        <p>Пожалуйста, поделитесь знаниями с друзьями</p>
+        <a href="#">Поделиться</a>
+      </footer>
     </article>
   </body>
 </html>
